--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
     "build:css": "npm-run-all compile:sass prefix:css compress:css"
   },
-  "author": "Jonas",
+  "author": "Minh Do",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^7.1.4",
